working on design

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -84,6 +84,10 @@
   max-width: 40%; /* Adjust as needed */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .info-image img {
   width: 100%;
   height: auto;
