--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,18 +1,21 @@
 .home {
   position: relative;
-  padding-top: 56px; /* Height of the navigation bar */
   text-align: center;
-  margin-top: -56px; /* Offset the top padding to remove space */
+  margin-top: 56px; /* Offset the height of the navigation bar */
 }
 
 .carousel {
   width: 100%;
-  height: calc(100vh - 56px); /* Adjust to ensure the carousel covers the remaining viewport height minus nav height */
+  height: 100vh; /* Full viewport height */
   overflow: hidden;
+  
 }
 
-.carousel-item {
-  height: 100%; /* Ensure carousel items fill the entire height */
+.carousel-item img {
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  object-fit: cover;
+  
 }
 
 .carousel-caption {
@@ -21,12 +24,18 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background: rgba(10, 10, 10, 0.5); /* Semi-transparent background */
   display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center vertically */
-  align-items: center; /* Center horizontally */
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+
+.carousel-caption .text-container {
+   /* Optional: Adds a semi-transparent background to the text */
   padding: 20px;
+  border-radius: 10px;
 }
 
 .text-container {
@@ -34,7 +43,7 @@
 }
 
 .text-content {
-  color: white;
+  color:white;
   text-align: left; /* Align text to the left */
 }
 
@@ -105,3 +114,6 @@ html {
   margin: 0.5rem 0;
   font-size: 1rem;
 }
+
+
+
